# winploit_proto

./: README.md
payload/: Cargo.toml
payload/src/: main.rs
